# physics-code

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  b1_calc.cpp  layout.xml  list of changes  todo
DIS/: CMakeLists.txt  Deut_Conv_EMTLF.cpp  DeuteronCross.cpp  DeuteronCross.hpp  DeuteronMomDistr.cpp  DeuteronMomDistr.hpp  GPD.cpp  GPD.hpp  He3Cross.cpp  He3Cross.hpp  InclusiveCross.cpp  InclusiveCross.hpp  InclusiveCrossRes.cpp  InclusiveCrossRes.hpp  Poldeut.cpp  Poldeut.hpp  Resonance.cpp  Resonance.hpp  TransGPD_set.cpp  TransGPD_set.hpp  deepstest.cpp  inctest.cpp  makefile  makefile_deeps  makefile_incl  test.cpp
DIS/evolution/: CMakeLists.txt  decouple.f90  evolution_speedy.f90  evolvers.f90  kinds.f90  kinds.mod  msbar.f90  utils.f90  vector_nonsinglet.f90  vector_singlet.f90  wrappers.f90
GPD_Partons/: CMakeLists.txt  fftest
GPD_Partons/include/: Deut_Conv_EMTLF.hpp  Deut_Conv_GPD_T.hpp  Deut_Conv_GPD_V.hpp  Deut_GPD_T_set.hpp  Deut_GPD_V_set.hpp  DiDVCS.hpp  GPD.hpp  GPD_T_Nucl_grid.hpp  GPD_V_Nucl_grid.hpp  TransGPD_set.hpp  TwoVector_Deut.hpp  TwoVector_Nucl.hpp  examples.h
GPD_Partons/src/: Deut_Conv_EMTLF.cpp  Deut_Conv_GPD_T.cpp  Deut_Conv_GPD_V.cpp  Deut_GPD_T_set.cpp  Deut_GPD_V_set.cpp  DiDVCS.cpp  GPD.cpp  GPD_T_Nucl_grid.cpp  GPD_V_Nucl_grid.cpp  TransGPD_set.cpp  TwoVector_Deut.cpp  TwoVector_Nucl.cpp  main.cpp
Glauber/: AbstractFsiCTDecayGrid.cpp  AbstractFsiCTDecayGrid.hpp  AbstractFsiCTDecayGridThick.cpp  AbstractFsiCTDecayGridThick.hpp  AbstractFsiCTGrid.cpp  AbstractFsiCTGrid.hpp  AbstractFsiCTGridThick.cpp  AbstractFsiCTGridThick.hpp  AbstractFsiDecayGridThick.cpp  AbstractFsiDecayGridThick.hpp  AbstractFsiGrid.cpp  AbstractFsiGrid.hpp  AbstractFsiGridThick.cpp  AbstractFsiGridThick.hpp  CMakeLists.txt  ClassGridThick_SCX.cpp  ClassGridThick_SCX.hpp  DistMomDistrGrid.cpp  DistMomDistrGrid.hpp  FastParticle.cpp  FastParticle.hpp  FsiCorrelator.cpp  FsiCorrelator.hpp  GlauberDecayGridThick.cpp  GlauberDecayGridThick.hpp  GlauberGrid.cpp  GlauberGrid.hpp  GlauberGridThick.cpp  GlauberGridThick.hpp  MeanFieldNucleus.cpp  MeanFieldNucleus.hpp  MeanFieldNucleusThick.cpp  MeanFieldNucleusThick.hpp  NucleonEMOperator.cpp  NucleonEMOperator.hpp  NucleonWeakOperator.cpp  NucleonWeakOperator.hpp  OneGlauberGrid.cpp  OneGlauberGrid.hpp  ROMEAGrid.cpp  (+9 more)
Integrator/: CMakeLists.txt  Cuba
Integrator/Cuba-3.3/: .gitignore  configure
Integrator/Cuba-4.2.1/: config.status  demo-c  demo-fortran  makefile  makefile.in
Integrator/adaptive/: cubature.c  cubature.h
Integrator/numint/: array.hpp  cube_romb.cpp  cube_tr.cpp  fubini.cpp  macros.hpp  numint.hpp  numint2Cuba.hpp  numint2adapt.hpp  numint_tools.hpp  quad_cc.cpp  quad_romb.cpp  quad_tr.cpp  quadrature.hpp  typedef.hpp  vfubini.cpp
Knockout/: CMakeLists.txt  Cross.cpp  Cross.hpp  DQEinclusive.cpp  DQEinclusive.hpp  DeuteronMomDistr.cpp  DeuteronMomDistr.hpp  DoubleNCross.cpp  DoubleNCross.hpp  DoubleNModel.cpp  DoubleNModel.hpp  Model.cpp  Model.hpp  PionTCross.cpp  PionTCross.hpp  RhoDeuteron.cpp  RhoDeuteron.hpp  RhoTCross.cpp  RhoTCross.hpp  WeakQECross.cpp  WeakQECross.hpp  WeakQEHadronCurrent.cpp  WeakQEHadronCurrent.hpp  makefile  test.cpp
Tools/: AuxFunction.hpp  CMakeLists.txt  DeuteronStructure.cpp  DeuteronStructure.hpp  F1F209_test.f  FourVector.cpp  FourVector.h  GammaStructure.cpp  GammaStructure.h  He3wf.cpp  He3wf.hpp  LightConeKin2to2.cpp  LightConeKin2to2.hpp  LightConeKin2to3.cpp  LightConeKin2to3.hpp  Matrix.cpp  Matrix.h  NuclStructure.cpp  NuclStructure.hpp  NucleonEMOperator.cpp  NucleonEMOperator.hpp  NucleonStructure.cpp  NucleonStructure.hpp  OldDeuteron.cpp  OldDeuteron.hpp  R199x.f  TCstPWF.cpp  TCstPWF.h  TCstPWFLinkDef.h  TDeuteron.cpp  TDeuteron.h  TDeuteronLinkDef.h  TElectronKinematics.cpp  TElectronKinematics.h  TElectronKinematicsLinkDef.h  TGrossPWF.cpp  TGrossPWF.h  TGrossPWFLinkDef.h  TInterpolatingWavefunction.cpp  TInterpolatingWavefunction.h  (+51 more)
progs/: CMakeLists.txt
progs/COMtest/: comtest  comtest.cpp  makefile  plot.py  plot2.py
progs/DQEinc/: CMakeLists.txt  DQEinc.cpp  makefile
progs/F2_largex_fit/: CMakeLists.txt  EMC_fit.cpp  F2_bootstrap.cpp  F2_fit.cpp  fomin_data.hpp  slac_data.hpp
progs/GPD/: CMakeLists.txt  EMT_deut.cpp  Nucl_GPD.cpp  conv_T_test.cpp  conv_V_test.cpp  diDVCS.cpp  diDVCS_Q2.cpp  diDVCS_gen.cpp  diDVCS_gen_grid.cpp  diDVCS_gen_grid.cpp.backup  diDVCS_gen_gridonly.cpp  gpd.cpp  two_vector_D.cpp  two_vector_N.cpp  two_vector_electro_N.cpp
progs/LDRD_test/: CMakeLists.txt  LDRD_test.cpp  makefile
progs/Minerva/: crosstest.cpp  makefile  minerva.cpp  minibooneQ2.cpp  minibooneQ2QE.cpp
progs/Obstest/: CMakeLists.txt  Ca_dens.cpp  Nucl_dens_profile.cpp  PxPz_exp_sample.cpp  makefile  observables.cpp
progs/RhoD/: gmon.out  makefile  rhod.cpp
progs/RhoDint/: makefile  rhodint.cpp
progs/RhoSingle/: makefile  rhosingle.cpp
progs/RhoTransparency/: CMakeLists.txt  decaytest.py  pionT_calc12.cpp  rhod.cpp  rhodint.cpp  rhoset.cpp  rhosingle.cpp  rhotest.cpp  rhottest.cpp
progs/RhoTtest/: makefile  rhottest.cpp
progs/Rhoset/: makefile  rhoset.cpp
progs/SCX_test/: CMakeLists.txt  Makefile  SCX_test.cpp  gridplot.py
progs/T_for_Or/: C.sh  CMakeLists.txt  makefile  transp.cpp
progs/adap_glauber/: adapglauber.cpp  countadap  countadap2  makefile
progs/camille/: CMakeLists.txt
progs/cuba_test/: CMakeLists.txt  Makefile  cubatest.cpp  cubatest_complex.cpp  cubatest_integrands.hpp  cubatest_multicomp.cpp  cubatest_wrapped.cpp
progs/deepsdis/: CMakeLists.txt  b1_calc.cpp  b1_calc_comp.cpp  band_calc.cpp  bonus_F2nfit.cpp  bonus_F2nfit_allangles.cpp  bonus_F2nfit_sys.cpp  bonusdata.h  bonusdata4.txt  bonusdata5.txt  bonusextrapolate.cpp  bonusextrapolate2.cpp  bonusfit.cpp  bonusfit_rig.cpp  bonusfitreadout.cpp  bonusfits.h  bonusfits2.h  bonusreadin.py  bonusreadout  bonusscatterfit.cpp  bonustest.cpp  deepsfit.cpp  deepstest.cpp  fitscript.py  hermes_comp.cpp  makefile  parabfit.cpp
progs/deepsfit/: deepsfit.cpp  makefile
progs/gammatest/: CMakeLists.txt  gamma.cpp  makefile
progs/glauber/: ref  (+4 more)
(+236 files in other folders)
